# FastApiService

./: Dockerfile  base.py  config.py  db.py  dependencies.py  docker-compose.yaml  main.py  notification.py  pyproject.toml  requirements.txt  validators.py  worker.py
meet/: crud.py  meets.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 132c502e2f58_add_tables.py
user/: crud.py  models.py  schemas.py  users.py
