
[tool.poetry]
name = "nova"
version = "0.1.0"
description = ""
authors = ["Lone <klimko.kirya@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 79
skip-string-normalization = true
skip-magic-trailing-comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
